Fix overflow of text on card display and adjust edit icon background so that it is visible over title

--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,7 @@ body {
     margin: 25px;
     position: relative;
     border-radius: 10px;
+    overflow: hidden;
   }
   
   /* Hover Effects for Cards (including pop-out effect) */
@@ -229,6 +230,9 @@ body {
     visibility: hidden;
     opacity: 0;
     transition: opacity 1s;
+    z-index: 5;
+    background-color: white;
+    border-radius: 10px;
   }
 
 
